--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Keep external repo folder untracked
+sistema-gestao-os/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
