test(ci): add Vitest + RTL, setup JSDOM, mobile menu a11y, and GitHub Actions for CI and Netlify deploy
- Configure vitest in vite.config.ts with jsdom + setup
- Add jest-dom, RTL, jsdom; test scripts
- Polyfill matchMedia in test setup
- Add smoke and interaction tests (8 passing)
- Improve Header mobile toggle (aria/testid)
- Add CI workflow and optional Netlify deploy workflow
- Ignore .env files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ dist
 dist-ssr
 *.local
 
+# Env files
+.env
+.env.*
+!.env.example
+
 # Keep external repo folder untracked
 sistema-gestao-os/
 
